button clicks are displayed and stored in localStorage, still displaying after page refresh, added media query for mobile, and a reset button

--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Go Speed Clicker</title>
-</head>
-<body>
-    <h1> How many clicks? </h1>
+  </head>
+  <body>
+    <div class="container">
+    <h1>How many clicks?</h1>
 
+    <button id="counter">Click Me</button>
+
+    <p class="counter" ><span id="clicks">0</span></p>
+
+    <button id="reset">Reset</button>
+    </div>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
